style react tabs to look like wet tabs, fix spacing around heading and tab panels

--- a/css/prototype.css
+++ b/css/prototype.css
@@ -1,3 +1,73 @@
+/******************************************************************
+                            React Tabs
+/******************************************************************/
+.react-tabs__tab-list {
+    border-bottom: none;
+    margin: 0;
+    padding: 0;
+}
+
+.react-tabs__tab {
+    display: inline-block;
+    border: 1px solid #aaa;
+    bottom: -1px;
+    position: relative;
+    list-style: none;
+    padding: 6px 12px;
+    cursor: pointer;
+    background: linear-gradient(to bottom, rgba(247, 247, 247, 1) 1%, rgba(232, 232, 232, 1) 100%);
+    border-radius: 5px 5px 0 0;
+    margin: 0 5px 0 5px;
+}
+
+.react-tabs__tab:nth-child(1) {
+    margin-left: 0;
+}
+
+.react-tabs__tab--selected {
+    display: inline-block;
+    background: #fff;
+    border: 1px solid #aaa;
+    border-bottom: 1px solid white;
+    color: black;
+    border-radius: 5px 5px 0 0;
+}
+
+.react-tabs__tab-panel {
+    display: none;
+}
+
+.react-tabs__tab-panel--selected {
+    display: block;
+    border: 1px solid #aaa;
+    border-radius: 0 5px 5px 5px;
+    padding: 10px;
+    margin-top: 0;
+    margin-bottom: 20px;
+}
+
+.react-tabs__tab--disabled {
+    color: grey;
+    cursor: default;
+}
+
+.react-tabs__tab:focus {
+    box-shadow: 0 0 5px hsl(208, 99%, 50%);
+    border-color: hsl(208,
+    99%, 50%);
+    outline: none;
+}
+
+.react-tabs__tab:focus:after {
+    content: "";
+    position: absolute;
+    height: 5px;
+    left: -4px;
+    right: -4px;
+    bottom: -5px;
+    background: #fff;
+}
+
 /****************************************************************
                     Call vs. Claim 
 ****************************************************************/
